DeliciousLang/DeliciousLangParser.java
// Generated from DeliciousLang.g4 by ANTLR 4.2.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DeliciousLangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__29=1, T__28=2, T__27=3, T__26=4, T__25=5, T__24=6, T__23=7, T__22=8, 
		T__21=9, T__20=10, T__19=11, T__18=12, T__17=13, T__16=14, T__15=15, T__14=16, 
		T__13=17, T__12=18, T__11=19, T__10=20, T__9=21, T__8=22, T__7=23, T__6=24, 
		T__5=25, T__4=26, T__3=27, T__2=28, T__1=29, T__0=30, STR=31, ID=32, NEWLINE=33, 
		INT=34, WS=35;
	public static final String[] tokenNames = {
		"<INVALID>", "','", "'or'", "'while'", "'*'", "'-'", "'not'", "'('", "'if'", 
		"'<'", "'!='", "'<='", "'and'", "'else'", "'do'", "'^'", "'xor'", "')'", 
		"'+'", "'elif'", "'='", "'fun'", "'div'", "'>'", "'proc'", "'mod'", "'then'", 
		"'begin'", "'/'", "'>='", "'end'", "STR", "ID", "NEWLINE", "INT", "WS"
	};
	public static final int
		RULE_prog = 0, RULE_stat = 1, RULE_expr = 2, RULE_exprNum = 3, RULE_exprStr = 4, 
		RULE_funcdef = 5, RULE_assign = 6, RULE_ifstat = 7, RULE_whilestat = 8, 
		RULE_listStat = 9, RULE_listID = 10, RULE_listExpr = 11, RULE_cond = 12;
	public static final String[] ruleNames = {
		"prog", "stat", "expr", "exprNum", "exprStr", "funcdef", "assign", "ifstat", 
		"whilestat", "listStat", "listID", "listExpr", "cond"
	};

	@Override
	public String getGrammarFileName() { return "DeliciousLang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DeliciousLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public ListStatContext listStat() {
			return getRuleContext(ListStatContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26); listStat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public WhilestatContext whilestat() {
			return getRuleContext(WhilestatContext.class,0);
		}
		public StatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatContext stat() throws RecognitionException {
		StatContext _localctx = new StatContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stat);
		try {
			setState(33);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(28); assign();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(29); expr();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(30); whilestat();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(31); ifstat();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(32); funcdef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DeliciousLangParser.ID, 0); }
		public ExprStrContext exprStr() {
			return getRuleContext(ExprStrContext.class,0);
		}
		public ListExprContext listExpr() {
			return getRuleContext(ListExprContext.class,0);
		}
		public ExprNumContext exprNum() {
			return getRuleContext(ExprNumContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expr);
		int _la;
		try {
			setState(44);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(35); match(ID);
				setState(36); match(7);
				setState(38);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << STR) | (1L << ID) | (1L << INT))) != 0)) {
					{
					setState(37); listExpr();
					}
				}

				setState(40); match(17);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41); match(ID);
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42); exprNum(0);
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43); exprStr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprNumContext extends ParserRuleContext {
		public ExprNumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprNum; }
	 
		public ExprNumContext() { }
		public void copyFrom(ExprNumContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ShortIfContext extends ExprNumContext {
		public ExprNumContext exprNum(int i) {
			return getRuleContext(ExprNumContext.class,i);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public List<ExprNumContext> exprNum() {
			return getRuleContexts(ExprNumContext.class);
		}
		public ShortIfContext(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitShortIf(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AriphmPr1Context extends ExprNumContext {
		public Token op;
		public ExprNumContext exprNum(int i) {
			return getRuleContext(ExprNumContext.class,i);
		}
		public List<ExprNumContext> exprNum() {
			return getRuleContexts(ExprNumContext.class);
		}
		public AriphmPr1Context(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitAriphmPr1(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class VarContext extends ExprNumContext {
		public TerminalNode ID() { return getToken(DeliciousLangParser.ID, 0); }
		public VarContext(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntContext extends ExprNumContext {
		public TerminalNode INT() { return getToken(DeliciousLangParser.INT, 0); }
		public IntContext(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitInt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunccallContext extends ExprNumContext {
		public TerminalNode ID() { return getToken(DeliciousLangParser.ID, 0); }
		public ListExprContext listExpr() {
			return getRuleContext(ListExprContext.class,0);
		}
		public FunccallContext(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitFunccall(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AriphmPr2Context extends ExprNumContext {
		public Token op;
		public ExprNumContext exprNum(int i) {
			return getRuleContext(ExprNumContext.class,i);
		}
		public List<ExprNumContext> exprNum() {
			return getRuleContexts(ExprNumContext.class);
		}
		public AriphmPr2Context(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitAriphmPr2(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ParenContext extends ExprNumContext {
		public ExprNumContext exprNum() {
			return getRuleContext(ExprNumContext.class,0);
		}
		public ParenContext(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitParen(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AriphmPr0Context extends ExprNumContext {
		public ExprNumContext exprNum(int i) {
			return getRuleContext(ExprNumContext.class,i);
		}
		public List<ExprNumContext> exprNum() {
			return getRuleContexts(ExprNumContext.class);
		}
		public AriphmPr0Context(ExprNumContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitAriphmPr0(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprNumContext exprNum() throws RecognitionException {
		return exprNum(0);
	}

	private ExprNumContext exprNum(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprNumContext _localctx = new ExprNumContext(_ctx, _parentState);
		ExprNumContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_exprNum, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new FunccallContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(47); match(ID);
				setState(48); match(7);
				setState(50);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << STR) | (1L << ID) | (1L << INT))) != 0)) {
					{
					setState(49); listExpr();
					}
				}

				setState(52); match(17);
				}
				break;

			case 2:
				{
				_localctx = new ParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(53); match(7);
				setState(54); exprNum(0);
				setState(55); match(17);
				}
				break;

			case 3:
				{
				_localctx = new IntContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(57); match(INT);
				}
				break;

			case 4:
				{
				_localctx = new VarContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(58); match(ID);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(76);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new AriphmPr0Context(new ExprNumContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exprNum);
						setState(61);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(62); match(15);
						setState(63); exprNum(8);
						}
						break;

					case 2:
						{
						_localctx = new AriphmPr1Context(new ExprNumContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exprNum);
						setState(64);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(65);
						((AriphmPr1Context)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 4) | (1L << 22) | (1L << 25) | (1L << 28))) != 0)) ) {
							((AriphmPr1Context)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(66); exprNum(7);
						}
						break;

					case 3:
						{
						_localctx = new AriphmPr2Context(new ExprNumContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exprNum);
						setState(67);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(68);
						((AriphmPr2Context)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==5 || _la==18) ) {
							((AriphmPr2Context)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						consume();
						setState(69); exprNum(6);
						}
						break;

					case 4:
						{
						_localctx = new ShortIfContext(new ExprNumContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_exprNum);
						setState(70);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(71); match(8);
						setState(72); cond(0);
						setState(73); match(13);
						setState(74); exprNum(4);
						}
						break;
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ExprStrContext extends ParserRuleContext {
		public ExprStrContext exprStr(int i) {
			return getRuleContext(ExprStrContext.class,i);
		}
		public TerminalNode STR() { return getToken(DeliciousLangParser.STR, 0); }
		public List<ExprStrContext> exprStr() {
			return getRuleContexts(ExprStrContext.class);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ExprStrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_exprStr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitExprStr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprStrContext exprStr() throws RecognitionException {
		return exprStr(0);
	}

	private ExprStrContext exprStr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExprStrContext _localctx = new ExprStrContext(_ctx, _parentState);
		ExprStrContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_exprStr, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(82); match(STR);
			}
			_ctx.stop = _input.LT(-1);
			setState(92);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ExprStrContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_exprStr);
					setState(84);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(85); match(8);
					setState(86); cond(0);
					setState(87); match(13);
					setState(88); exprStr(2);
					}
					} 
				}
				setState(94);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public Token rettype;
		public List<TerminalNode> NEWLINE() { return getTokens(DeliciousLangParser.NEWLINE); }
		public ListStatContext listStat() {
			return getRuleContext(ListStatContext.class,0);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(DeliciousLangParser.NEWLINE, i);
		}
		public ListIDContext listID() {
			return getRuleContext(ListIDContext.class,0);
		}
		public TerminalNode ID() { return getToken(DeliciousLangParser.ID, 0); }
		public StatContext stat() {
			return getRuleContext(StatContext.class,0);
		}
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitFuncdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_funcdef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			((FuncdefContext)_localctx).rettype = _input.LT(1);
			_la = _input.LA(1);
			if ( !(_la==21 || _la==24) ) {
				((FuncdefContext)_localctx).rettype = (Token)_errHandler.recoverInline(this);
			}
			consume();
			setState(96); match(ID);
			setState(97); match(7);
			setState(99);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(98); listID();
				}
			}

			setState(101); match(17);
			setState(116);
			switch (_input.LA(1)) {
			case 27:
				{
				setState(102); match(27);
				setState(104);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(103); match(NEWLINE);
					}
				}

				setState(106); listStat();
				setState(108);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(107); match(NEWLINE);
					}
				}

				setState(110); match(30);
				}
				break;
			case 3:
			case 7:
			case 8:
			case 21:
			case 24:
			case STR:
			case ID:
			case NEWLINE:
			case INT:
				{
				setState(113);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(112); match(NEWLINE);
					}
				}

				setState(115); stat();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public ListIDContext listID() {
			return getRuleContext(ListIDContext.class,0);
		}
		public ListExprContext listExpr() {
			return getRuleContext(ListExprContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitAssign(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); listID();
			setState(119); match(20);
			setState(120); listExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstatContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(DeliciousLangParser.NEWLINE); }
		public List<ListStatContext> listStat() {
			return getRuleContexts(ListStatContext.class);
		}
		public ListStatContext listStat(int i) {
			return getRuleContext(ListStatContext.class,i);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(DeliciousLangParser.NEWLINE, i);
		}
		public CondContext cond(int i) {
			return getRuleContext(CondContext.class,i);
		}
		public List<CondContext> cond() {
			return getRuleContexts(CondContext.class);
		}
		public IfstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitIfstat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfstatContext ifstat() throws RecognitionException {
		IfstatContext _localctx = new IfstatContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_ifstat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(8);
			setState(123); cond(0);
			setState(124); match(26);
			setState(126);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(125); match(NEWLINE);
				}
			}

			setState(128); listStat();
			setState(130);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(129); match(NEWLINE);
				}
			}

			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==19) {
				{
				{
				setState(132); match(19);
				setState(133); cond(0);
				setState(134); match(26);
				setState(136);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(135); match(NEWLINE);
					}
				}

				setState(138); listStat();
				setState(140);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(139); match(NEWLINE);
					}
				}

				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(155);
			_la = _input.LA(1);
			if (_la==13) {
				{
				setState(147); match(13);
				setState(149);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(148); match(NEWLINE);
					}
				}

				setState(151); listStat();
				setState(153);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(152); match(NEWLINE);
					}
				}

				}
			}

			setState(157); match(30);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhilestatContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(DeliciousLangParser.NEWLINE); }
		public ListStatContext listStat() {
			return getRuleContext(ListStatContext.class,0);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(DeliciousLangParser.NEWLINE, i);
		}
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public WhilestatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whilestat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitWhilestat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhilestatContext whilestat() throws RecognitionException {
		WhilestatContext _localctx = new WhilestatContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_whilestat);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159); match(3);
			setState(160); cond(0);
			setState(161); match(14);
			setState(163);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(162); match(NEWLINE);
				}
			}

			setState(165); listStat();
			setState(167);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(166); match(NEWLINE);
				}
			}

			setState(169); match(30);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListStatContext extends ParserRuleContext {
		public List<TerminalNode> NEWLINE() { return getTokens(DeliciousLangParser.NEWLINE); }
		public StatContext stat(int i) {
			return getRuleContext(StatContext.class,i);
		}
		public TerminalNode NEWLINE(int i) {
			return getToken(DeliciousLangParser.NEWLINE, i);
		}
		public List<StatContext> stat() {
			return getRuleContexts(StatContext.class);
		}
		public ListStatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listStat; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitListStat(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListStatContext listStat() throws RecognitionException {
		ListStatContext _localctx = new ListStatContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_listStat);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(171); stat();
			setState(176);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			while ( _alt!=2 && _alt!=ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(172); match(NEWLINE);
					setState(173); stat();
					}
					} 
				}
				setState(178);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,23,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListIDContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(DeliciousLangParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DeliciousLangParser.ID, i);
		}
		public ListIDContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listID; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DeliciousLangVisitor ) return ((DeliciousLangVisitor<? extends T>)visitor).visitListID(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListIDContext listID() throws RecognitionException {
		ListIDContext _localctx = new ListIDContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_listID);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(179); match(ID);
			setState(184);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==1) {
				{
				{
				setState(180); match(1);
				setState(181); match(ID);
				}
				}
				setState(186);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
